stupid layout bug caused by too smart webpack fixed

--- a/frontend/resources/intro.scss
+++ b/frontend/resources/intro.scss
@@ -28,7 +28,7 @@
         display: inline-block;
         border-radius: 10px;
         font-size: 30px;
-        &[type=text] {
+        &#nameInput {
             width: 60%;
             background: none;
             border: 2px solid rgba(255,255,255,0.25);
@@ -37,7 +37,7 @@
                 border: 2px solid rgba(255,255,255,0.75);
             }        
         }
-        &[type=button] {
+        &#nameButton {
             cursor: pointer;
             color: black;
             background: white;
